--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,11 +5,7 @@
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font: 16px "Helvetiva Neue", Arial, sans-serif;
     background-color: #222;
     color: #bbb;
-}
-
-h1 {
-    font-size: 80px;
 }
